src/test/deca/syntax/valid/AvecObjet/ProtectedVisibility.deca
//Description
//  test de visibilité protected
//
//Réponse
//  ok

class TestInvalide {
    protected int x;

}