src/test/deca/syntax/invalid/AvecObjet/VisibilityPrivate.deca
//Description
//  test de visibilité inexistante
//
//Réponse
//  Erreur syntaxique ligne 9
//   no viable alternative at input 'privateintx'

class TestInvalide {
    private int x;

}